--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap');
 body {
     background-color: linen;
     padding: 0px;
@@ -41,8 +42,17 @@ body {
     background-repeat: no-repeat;
     background-size: cover  ;
 }
+.invitation-bg-2{
+    background-image: url("img/bg2-min.png");
+    background-repeat: no-repeat;
+    background-size: cover  ;
+}
 .invitation-wrapper{
     height: 100%;
+
+}
+.col-index{
+    z-index: 10;
 }
 .date-style{
     font-weight: 700;
@@ -63,7 +73,7 @@ body {
     width: 400px;
     max-width: 400px;
     background-color: rgba(255, 255, 255, 0.45);;
-    margin-top: 3rem;
+    margin-top: 20px;
     text-align: left;
     border-radius: 12px;
     font-size: 0.75rem;
@@ -78,6 +88,7 @@ body {
 
 }
 .form-style{
+    font-family: 'Poppins', sans-serif;
     background-color: white;
     padding: 24px;
     width: 80%;
@@ -86,6 +97,18 @@ body {
     text-align: left !important;
     border-radius: 12px;
     z-index: 4;
+    font-size: smaller;
+}
+.fade-anim { animation: fadeIn 5s; }
+@keyframes fadeIn {
+    0% { 
+        opacity: 0; 
+        transform: translateY(20px)
+    }
+    100% { 
+        opacity: 1; 
+        transform: translateY(0);
+    }
 }
 
 @media only screen and (max-width: 414px) {
